@startuml

class           QueryProcessingSubsystem

' Evaluator definition
class           QueryEvaluator

class           ClauseEvaluator

class           SuchThatClause
class           PatternClause

' Preprocessor definition
class           QueryPreprocessor

class           Parser
class           Validator
class           Tokenizer

class           ClauseArguments

QueryProcessingSubsystem           -->           QueryEvaluator
QueryProcessingSubsystem           -->           QueryPreprocessor

QueryEvaluator          .right.       QueryPreprocessor     :   < inputs clause arguments

QueryEvaluator          -->         ClauseEvaluator
ClauseEvaluator         -->         SuchThatClause
ClauseEvaluator         -->         PatternClause

QueryPreprocessor       -->         Parser
QueryPreprocessor       -->         Validator
QueryPreprocessor       -->         Tokenizer

Parser              <.right.        Validator
Validator           <.right.        Tokenizer

Parser              -->         ClauseArguments

hide empty fields
hide empty methods

@enduml
